@@ -9,6 +9,7 @@ Changelog for 1.3.32
 * Fixed transaction list empty if searched by creditor name (Nick P, 806)
 * Fixed cash transfer enforces ticked 'FX' boxes (Nick P, 802)
 * Fixed extra newline-related errors in tex template engine (Chris T)
+* Reopen books now works again (Chris T, 792)
 
 Nick P is Nick Prater
 
